fixing router, tightening up spacing

--- a/src/components/Signup/Signup.module.scss
+++ b/src/components/Signup/Signup.module.scss
@@ -3,7 +3,7 @@
 .signup {
 
   max-width: 20em;
-  margin: 4em auto 0;
+  margin: 3em auto 0;
 
   p,
   input,
